.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b3 - Unreleased
------------------

- Don't send Bcc header with Mailhost.secureSend. Renamed CC header to Cc.
  [vincentfretin]

- Fixed folder_listing.pt so it doesn't stringify and then reparse the start
  and end dates of events (this also fixes a timezone issue,
  http://dev.plone.org/plone/ticket/10445)
  [davisagli]

- Fixed folder_listing.pt so that it shows event dates in a cleaner way 
  (no more redundant listing of times + dates when and event is on one day
  has same start + end time)
  [jonstahl]

- Change the title of the Users folder to be more in line with its actual
  function.
  Fixes: http://dev.plone.org/plone/ticket/9693
  [cwainwright]

- Inject contentFilter as **kw params to topic's queryCatalog and not as first
  argument which should be the REQUEST, if given. With that in place, batching
  on contentFiltered topics works again.
  Fixes: http://dev.plone.org/plone/ticket/10428
  [thet]

- Template for editing user preferences (prefs_user_details) is replaced by
  personal information and preferences forms from plone.app.users. Moved
  prefs_user_details and prefs_user_edit to deprecated skins.
  http://dev.plone.org/plone/ticket/10327
  [kcleong]


4.0b2 - 2010-03-09
------------------

- Explicitly check that a searchterm was provided before adding it to the
  query string.
  Fixes http://dev.plone.org/plone/ticket/9025
  (Port of [35909])
  [blueaidan]

- Batch folderContents in folder_listing's listing macro if it's not already
  batched when passed in. This closes http://dev.plone.org/plone/ticket/10401
  [davisagli]

- Added overlays for Rename and selecting default folder views.
  [limi]

- Made the core content types use CSS sprites instead of individual images,
  which cuts down the number of image HTTP requests from 11 to 2.